@@ -1,17 +1,17 @@
 /*
- * Copyright 2012-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.cli;
@@ -22,39 +22,38 @@ import com.facebook.buck.android.exopackage.AndroidDevicesHelperFactory;
 import com.facebook.buck.command.Build;
 import com.facebook.buck.command.config.BuildBuckConfig;
 import com.facebook.buck.core.build.context.BuildContext;
-import com.facebook.buck.core.build.distributed.synchronization.impl.NoOpRemoteBuildRuleCompletionWaiter;
 import com.facebook.buck.core.build.engine.BuildEngine;
 import com.facebook.buck.core.build.engine.config.CachingBuildEngineBuckConfig;
 import com.facebook.buck.core.build.engine.delegate.LocalCachingBuildEngineDelegate;
 import com.facebook.buck.core.build.engine.impl.CachingBuildEngine;
-import com.facebook.buck.core.build.engine.impl.MetadataChecker;
 import com.facebook.buck.core.build.event.BuildEvent;
 import com.facebook.buck.core.build.execution.context.ExecutionContext;
 import com.facebook.buck.core.config.BuckConfig;
 import com.facebook.buck.core.model.BuildTarget;
+import com.facebook.buck.core.model.CellRelativePath;
 import com.facebook.buck.core.model.actiongraph.ActionGraphAndBuilder;
-import com.facebook.buck.core.model.targetgraph.TargetGraph;
-import com.facebook.buck.core.model.targetgraph.TargetGraphAndBuildTargets;
+import com.facebook.buck.core.model.targetgraph.TargetGraphCreationResult;
 import com.facebook.buck.core.model.targetgraph.TargetNode;
 import com.facebook.buck.core.model.targetgraph.impl.TargetNodes;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.resources.ResourcesConfig;
 import com.facebook.buck.core.rulekey.RuleKey;
 import com.facebook.buck.core.rules.BuildRule;
 import com.facebook.buck.core.rules.BuildRuleResolver;
-import com.facebook.buck.core.rules.SourcePathRuleFinder;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
+import com.facebook.buck.core.rules.attr.HasRuntimeDeps;
 import com.facebook.buck.core.test.rule.ExternalTestRunnerRule;
-import com.facebook.buck.core.test.rule.ExternalTestRunnerTestSpec;
+import com.facebook.buck.core.test.rule.ExternalTestSpec;
 import com.facebook.buck.core.test.rule.TestRule;
 import com.facebook.buck.core.util.log.Logger;
 import com.facebook.buck.event.ConsoleEvent;
+import com.facebook.buck.jvm.core.JavaLibrary;
 import com.facebook.buck.jvm.java.JavaBuckConfig;
-import com.facebook.buck.parser.BuildFileSpec;
-import com.facebook.buck.parser.ParserConfig;
 import com.facebook.buck.parser.ParsingContext;
 import com.facebook.buck.parser.SpeculativeParsing;
-import com.facebook.buck.parser.TargetNodePredicateSpec;
+import com.facebook.buck.parser.config.ParserConfig;
 import com.facebook.buck.parser.exceptions.BuildFileParseException;
+import com.facebook.buck.parser.spec.BuildFileSpec;
+import com.facebook.buck.parser.spec.ImmutableTargetNodePredicateSpec;
 import com.facebook.buck.remoteexecution.config.RemoteExecutionConfig;
 import com.facebook.buck.rules.keys.RuleKeyCacheRecycler;
 import com.facebook.buck.rules.keys.RuleKeyCacheScope;
@@ -62,7 +61,6 @@ import com.facebook.buck.rules.keys.RuleKeyFactories;
 import com.facebook.buck.rules.modern.builders.ModernBuildRuleBuilderFactory;
 import com.facebook.buck.rules.modern.config.ModernBuildRuleConfig;
 import com.facebook.buck.step.AdbOptions;
-import com.facebook.buck.step.DefaultStepRunner;
 import com.facebook.buck.test.CoverageReportFormat;
 import com.facebook.buck.test.TestRunningOptions;
 import com.facebook.buck.test.config.TestBuckConfig;
@@ -74,9 +72,10 @@ import com.facebook.buck.util.ForwardingProcessListener;
 import com.facebook.buck.util.ListeningProcessExecutor;
 import com.facebook.buck.util.MoreExceptions;
 import com.facebook.buck.util.ProcessExecutorParams;
-import com.facebook.buck.util.RichStream;
+import com.facebook.buck.util.collect.MoreSets;
 import com.facebook.buck.util.concurrent.ConcurrencyLimit;
 import com.facebook.buck.util.json.ObjectMappers;
+import com.facebook.buck.util.stream.RichStream;
 import com.facebook.buck.versions.VersionException;
 import com.facebook.infer.annotation.SuppressFieldNotInitialized;
 import com.google.common.annotations.VisibleForTesting;
@@ -89,7 +88,6 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
@@ -316,7 +314,6 @@ public class TestCommand extends BuildCommand {
 
     try (CommandThreadManager testPool =
         new CommandThreadManager("Test-Run", getTestConcurrencyLimit(params))) {
-      SourcePathRuleFinder ruleFinder = new SourcePathRuleFinder(build.getGraphBuilder());
       int exitCodeInt =
           TestRunning.runTests(
               params,
@@ -326,9 +323,8 @@ public class TestCommand extends BuildCommand {
               getTestRunningOptions(params),
               testPool.getWeightedListeningExecutorService(),
               buildEngine,
-              new DefaultStepRunner(),
               buildContext,
-              ruleFinder);
+              build.getGraphBuilder());
       return ExitCode.map(exitCodeInt);
     }
   }
@@ -361,7 +357,7 @@ public class TestCommand extends BuildCommand {
             .getView(TestBuckConfig.class)
             .isParallelExternalTestSpecComputationEnabled();
     // Walk the test rules, collecting all the specs.
-    ImmutableList<ExternalTestRunnerTestSpec> specs =
+    ImmutableList<ExternalTestSpec> specs =
         StreamSupport.stream(testRules.spliterator(), parallelExternalTestSpecComputationEnabled)
             .map(ExternalTestRunnerRule.class::cast)
             .map(
@@ -466,61 +462,67 @@ public class TestCommand extends BuildCommand {
 
     LOG.debug("Running with arguments %s", getArguments());
 
+    ListeningProcessExecutor processExecutor = new ListeningProcessExecutor();
     try (CommandThreadManager pool =
-        new CommandThreadManager("Test", getConcurrencyLimit(params.getBuckConfig()))) {
+            new CommandThreadManager("Test", getConcurrencyLimit(params.getBuckConfig()));
+        BuildPrehook prehook = getPrehook(processExecutor, params)) {
+      prehook.startPrehookScript();
       BuildEvent.Started started = BuildEvent.started(getArguments());
       params.getBuckEventBus().post(started);
 
       // The first step is to parse all of the build files. This will populate the parser and find
       // all of the test rules.
-      TargetGraphAndBuildTargets targetGraphAndBuildTargets;
+      TargetGraphCreationResult targetGraphCreationResult;
       ParserConfig parserConfig = params.getBuckConfig().getView(ParserConfig.class);
       ParsingContext parsingContext =
-          ParsingContext.builder(params.getCell(), pool.getListeningExecutorService())
-              .setProfilingEnabled(getEnableParserProfiling())
-              .setSpeculativeParsing(SpeculativeParsing.ENABLED)
-              .setExcludeUnsupportedTargets(getExcludeIncompatibleTargets())
-              .setApplyDefaultFlavorsMode(parserConfig.getDefaultFlavorsMode())
-              .build();
+          createParsingContext(params.getCell(), pool.getListeningExecutorService())
+              .withApplyDefaultFlavorsMode(parserConfig.getDefaultFlavorsMode())
+              .withSpeculativeParsing(SpeculativeParsing.ENABLED);
 
+      ImmutableSet<BuildTarget> explicitBuildTargets = ImmutableSet.of();
       try {
 
         // If the user asked to run all of the tests, parse all of the build files looking for any
         // test rules.
         if (isRunAllTests()) {
-          targetGraphAndBuildTargets =
+          targetGraphCreationResult =
               params
                   .getParser()
-                  .buildTargetGraphWithoutConfigurationTargets(
+                  .buildTargetGraphWithoutTopLevelConfigurationTargets(
                       parsingContext,
                       ImmutableList.of(
-                          TargetNodePredicateSpec.of(
-                                  BuildFileSpec.fromRecursivePath(
-                                      Paths.get(""), params.getCell().getRoot()))
-                              .withOnlyTests(true)));
-          targetGraphAndBuildTargets =
-              targetGraphAndBuildTargets.withBuildTargets(ImmutableSet.of());
+                          ImmutableTargetNodePredicateSpec.of(
+                              BuildFileSpec.fromRecursivePath(
+                                  CellRelativePath.of(
+                                      params.getCell().getCanonicalName(),
+                                      ForwardRelativePath.of(""))),
+                              true)),
+                      params.getTargetConfiguration());
+          targetGraphCreationResult = targetGraphCreationResult.withBuildTargets(ImmutableSet.of());
 
           // Otherwise, the user specified specific test targets to build and run, so build a graph
           // around these.
         } else {
           LOG.debug("Parsing graph for arguments %s", getArguments());
-          targetGraphAndBuildTargets =
+          targetGraphCreationResult =
               params
                   .getParser()
-                  .buildTargetGraphWithoutConfigurationTargets(
+                  .buildTargetGraphWithoutTopLevelConfigurationTargets(
                       parsingContext,
                       parseArgumentsAsTargetNodeSpecs(
-                          params.getCell().getCellPathResolver(),
-                          params.getBuckConfig(),
-                          getArguments()));
+                          params.getCell(),
+                          params.getClientWorkingDir(),
+                          getArguments(),
+                          params.getBuckConfig()),
+                      params.getTargetConfiguration());
 
-          LOG.debug("Got explicit build targets %s", targetGraphAndBuildTargets.getBuildTargets());
+          explicitBuildTargets = targetGraphCreationResult.getBuildTargets();
+          LOG.debug("Got explicit build targets %s", explicitBuildTargets);
           ImmutableSet.Builder<BuildTarget> testTargetsBuilder = ImmutableSet.builder();
           for (TargetNode<?> node :
-              targetGraphAndBuildTargets
+              targetGraphCreationResult
                   .getTargetGraph()
-                  .getAll(targetGraphAndBuildTargets.getBuildTargets())) {
+                  .getAll(targetGraphCreationResult.getBuildTargets())) {
             ImmutableSortedSet<BuildTarget> nodeTests = TargetNodes.getTestTargetsForNode(node);
             if (!nodeTests.isEmpty()) {
               LOG.debug("Got tests for target %s: %s", node.getBuildTarget(), nodeTests);
@@ -530,17 +532,16 @@ public class TestCommand extends BuildCommand {
           ImmutableSet<BuildTarget> testTargets = testTargetsBuilder.build();
           if (!testTargets.isEmpty()) {
             LOG.debug("Got related test targets %s, building new target graph...", testTargets);
-            Iterable<BuildTarget> allTargets =
-                Iterables.concat(targetGraphAndBuildTargets.getBuildTargets(), testTargets);
-            TargetGraph targetGraph =
+            ImmutableSet<BuildTarget> allTargets =
+                MoreSets.union(targetGraphCreationResult.getBuildTargets(), testTargets);
+            targetGraphCreationResult =
                 params.getParser().buildTargetGraph(parsingContext, allTargets);
             LOG.debug("Finished building new target graph with tests.");
-            targetGraphAndBuildTargets = TargetGraphAndBuildTargets.of(targetGraph, allTargets);
           }
         }
 
         if (params.getBuckConfig().getView(BuildBuckConfig.class).getBuildVersions()) {
-          targetGraphAndBuildTargets = toVersionedTargetGraph(params, targetGraphAndBuildTargets);
+          targetGraphCreationResult = toVersionedTargetGraph(params, targetGraphCreationResult);
         }
 
       } catch (BuildFileParseException | VersionException e) {
@@ -551,9 +552,7 @@ public class TestCommand extends BuildCommand {
       }
 
       ActionGraphAndBuilder actionGraphAndBuilder =
-          params
-              .getActionGraphProvider()
-              .getActionGraph(targetGraphAndBuildTargets.getTargetGraph());
+          params.getActionGraphProvider().getActionGraph(targetGraphCreationResult);
       // Look up all of the test rules in the action graph.
       Iterable<TestRule> testRules =
           Iterables.filter(actionGraphAndBuilder.getActionGraph().getNodes(), TestRule.class);
@@ -561,12 +560,24 @@ public class TestCommand extends BuildCommand {
       // Unless the user requests that we build filtered tests, filter them out here, before
       // the build.
       if (!isBuildFiltered(params.getBuckConfig())) {
-        testRules =
-            filterTestRules(
-                params.getBuckConfig(), targetGraphAndBuildTargets.getBuildTargets(), testRules);
+        testRules = filterTestRules(params.getBuckConfig(), explicitBuildTargets, testRules);
       }
 
-      MetadataChecker.checkAndCleanIfNeeded(params.getCell());
+      ImmutableSet<BuildRule> rulesToMaterializeForAnalysis = ImmutableSet.of();
+      if (isCodeCoverageEnabled) {
+        // Ensure that the libraries that we want to inspect after the build are built/fetched.
+        // This requires that the rules under test are materialized as well as any generated srcs
+        // that they use
+        BuildRuleResolver ruleResolver = actionGraphAndBuilder.getActionGraphBuilder();
+        ImmutableSet<JavaLibrary> rulesUnderTest = TestRunning.getRulesUnderTest(testRules);
+        rulesToMaterializeForAnalysis =
+            RichStream.from(rulesUnderTest)
+                .flatMap(
+                    lib -> RichStream.from(ruleResolver.filterBuildRuleInputs(lib.getJavaSrcs())))
+                .concat(RichStream.from(rulesUnderTest))
+                .collect(ImmutableSet.toImmutableSet());
+      }
+
       CachingBuildEngineBuckConfig cachingBuildEngineBuckConfig =
           params.getBuckConfig().getView(CachingBuildEngineBuckConfig.class);
       try (RuleKeyCacheScope<RuleKey> ruleKeyCacheScope =
@@ -575,10 +586,14 @@ public class TestCommand extends BuildCommand {
               new RuleKeyCacheRecycler.SettingsAffectingCache(
                   params.getBuckConfig().getView(BuildBuckConfig.class).getKeySeed(),
                   actionGraphAndBuilder.getActionGraph()))) {
+        boolean remoteExecutionAutoEnabled =
+            params
+                .getBuckConfig()
+                .getView(RemoteExecutionConfig.class)
+                .isRemoteExecutionAutoEnabled(
+                    params.getBuildEnvironmentDescription().getUser(), getArguments());
         LocalCachingBuildEngineDelegate localCachingBuildEngineDelegate =
             new LocalCachingBuildEngineDelegate(params.getFileHashCache());
-        SourcePathRuleFinder sourcePathRuleFinder =
-            new SourcePathRuleFinder(actionGraphAndBuilder.getActionGraphBuilder());
         try (CachingBuildEngine cachingBuildEngine =
                 new CachingBuildEngine(
                     localCachingBuildEngineDelegate,
@@ -590,17 +605,17 @@ public class TestCommand extends BuildCommand {
                         params.getCell().getCellPathResolver(),
                         localCachingBuildEngineDelegate.getFileHashCache(),
                         params.getBuckEventBus(),
-                        params.getMetadataProvider()),
+                        params.getMetadataProvider(),
+                        remoteExecutionAutoEnabled,
+                        isRemoteExecutionForceDisabled()),
                     pool.getWeightedListeningExecutorService(),
-                    new DefaultStepRunner(),
                     getBuildEngineMode().orElse(cachingBuildEngineBuckConfig.getBuildEngineMode()),
-                    cachingBuildEngineBuckConfig.getBuildMetadataStorage(),
                     cachingBuildEngineBuckConfig.getBuildDepFiles(),
                     cachingBuildEngineBuckConfig.getBuildMaxDepFileCacheEntries(),
                     cachingBuildEngineBuckConfig.getBuildArtifactCacheSizeLimit(),
                     actionGraphAndBuilder.getActionGraphBuilder(),
-                    sourcePathRuleFinder,
-                    DefaultSourcePathResolver.from(sourcePathRuleFinder),
+                    actionGraphAndBuilder.getBuildEngineActionToBuildRuleResolver(),
+                    params.getTargetConfigurationSerializer(),
                     params.getBuildInfoStoreManager(),
                     cachingBuildEngineBuckConfig.getResourceAwareSchedulingInfo(),
                     cachingBuildEngineBuckConfig.getConsoleLogBuildRuleFailuresInline(),
@@ -613,7 +628,6 @@ public class TestCommand extends BuildCommand {
                             .getView(BuildBuckConfig.class)
                             .getBuildInputRuleKeyFileSizeLimit(),
                         ruleKeyCacheScope.getCache()),
-                    new NoOpRemoteBuildRuleCompletionWaiter(),
                     cachingBuildEngineBuckConfig.getManifestServiceIfEnabled(
                         params.getManifestServiceSupplier()));
             Build build =
@@ -630,12 +644,20 @@ public class TestCommand extends BuildCommand {
                     getExecutionContext(),
                     isKeepGoing())) {
 
-          // Build all of the test rules.
+          // Build all of the test rules and runtime deps.
+          Iterable<BuildTarget> targets =
+              RichStream.from(testRules)
+                  .filter(HasRuntimeDeps.class::isInstance)
+                  .map(HasRuntimeDeps.class::cast)
+                  .flatMap(
+                      rule -> rule.getRuntimeDeps(actionGraphAndBuilder.getActionGraphBuilder()))
+                  .concat(RichStream.from(testRules).map(TestRule::getBuildTarget))
+                  .concat(
+                      RichStream.from(rulesToMaterializeForAnalysis).map(BuildRule::getBuildTarget))
+                  .toImmutableList();
           ExitCode exitCode =
               build.executeAndPrintFailuresToEventBus(
-                  RichStream.from(testRules)
-                      .map(TestRule::getBuildTarget)
-                      .collect(ImmutableList.toImmutableList()),
+                  targets,
                   params.getBuckEventBus(),
                   params.getConsole(),
                   getPathToBuildReport(params.getBuckConfig()));
@@ -647,18 +669,12 @@ public class TestCommand extends BuildCommand {
           // If the user requests that we build tests that we filter out, then we perform
           // the filtering here, after we've done the build but before we run the tests.
           if (isBuildFiltered(params.getBuckConfig())) {
-            testRules =
-                filterTestRules(
-                    params.getBuckConfig(),
-                    targetGraphAndBuildTargets.getBuildTargets(),
-                    testRules);
+            testRules = filterTestRules(params.getBuckConfig(), explicitBuildTargets, testRules);
           }
-
           BuildContext buildContext =
               BuildContext.builder()
                   .setSourcePathResolver(
-                      DefaultSourcePathResolver.from(
-                          new SourcePathRuleFinder(actionGraphAndBuilder.getActionGraphBuilder())))
+                      actionGraphAndBuilder.getActionGraphBuilder().getSourcePathResolver())
                   .setBuildCellRootPath(params.getCell().getRoot())
                   .setJavaPackageFinder(params.getJavaPackageFinder())
                   .setEventBus(params.getBuckEventBus())
@@ -783,9 +799,7 @@ public class TestCommand extends BuildCommand {
     @Override
     public int parseArguments(Parameters params) throws CmdLineException {
       Set<String> parsed =
-          Splitter.on(",")
-              .splitToList(params.getParameter(0))
-              .stream()
+          Splitter.on(",").splitToList(params.getParameter(0)).stream()
               .map(s -> s.replaceAll("-", "_").toLowerCase())
               .collect(Collectors.toSet());
       List<CoverageReportFormat> formats = new ArrayList<>();
