@@ -1,17 +1,17 @@
 /*
- * Copyright 2017-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.coercer;
@@ -19,28 +19,18 @@ package com.facebook.buck.rules.coercer;
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.TargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.rules.macros.LocationMacro;
+import com.facebook.buck.util.types.Pair;
 import com.google.common.collect.ImmutableList;
-import java.nio.file.Path;
+import java.util.Optional;
 
-class LocationMacroTypeCoercer implements MacroTypeCoercer<LocationMacro> {
-
-  private final TypeCoercer<BuildTarget> buildTargetTypeCoercer;
+/** Coerces `$(location ...)` macros into {@link LocationMacro}. */
+class LocationMacroTypeCoercer extends AbstractLocationMacroTypeCoercer<LocationMacro> {
 
   public LocationMacroTypeCoercer(TypeCoercer<BuildTarget> buildTargetTypeCoercer) {
-    this.buildTargetTypeCoercer = buildTargetTypeCoercer;
-  }
-
-  @Override
-  public boolean hasElementClass(Class<?>[] types) {
-    return buildTargetTypeCoercer.hasElementClass(types);
-  }
-
-  @Override
-  public void traverse(
-      CellPathResolver cellRoots, LocationMacro macro, TypeCoercer.Traversal traversal) {
-    buildTargetTypeCoercer.traverse(cellRoots, macro.getTarget(), traversal);
+    super(buildTargetTypeCoercer);
   }
 
   @Override
@@ -52,18 +42,23 @@ class LocationMacroTypeCoercer implements MacroTypeCoercer<LocationMacro> {
   public LocationMacro coerce(
       CellPathResolver cellRoots,
       ProjectFilesystem filesystem,
-      Path pathRelativeToProjectRoot,
+      ForwardRelativePath pathRelativeToProjectRoot,
       TargetConfiguration targetConfiguration,
+      TargetConfiguration hostConfiguration,
       ImmutableList<String> args)
       throws CoerceFailedException {
     if (args.size() != 1 || args.get(0).isEmpty()) {
       throw new CoerceFailedException(
           String.format("expected exactly one argument (found %d)", args.size()));
     }
-    LocationMacro.SplitResult parts = LocationMacro.splitSupplementaryOutputPart(args.get(0));
-    BuildTarget target =
-        buildTargetTypeCoercer.coerce(
-            cellRoots, filesystem, pathRelativeToProjectRoot, targetConfiguration, parts.target);
-    return LocationMacro.of(target, parts.supplementaryOutput);
+    Pair<BuildTarget, Optional<String>> target =
+        coerceTarget(
+            cellRoots,
+            filesystem,
+            pathRelativeToProjectRoot,
+            targetConfiguration,
+            hostConfiguration,
+            args.get(0));
+    return LocationMacro.of(target.getFirst(), target.getSecond());
   }
 }
