@@ -1,17 +1,17 @@
 /*
- * Copyright 2012-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.core.parser.buildtargetparser;
@@ -24,10 +24,12 @@ import static org.junit.Assert.assertTrue;
 import static org.junit.Assert.fail;
 
 import com.facebook.buck.core.cell.CellPathResolver;
-import com.facebook.buck.core.cell.impl.DefaultCellPathResolver;
+import com.facebook.buck.core.cell.TestCellPathResolver;
 import com.facebook.buck.core.exceptions.BuildTargetParseException;
+import com.facebook.buck.core.model.BaseName;
 import com.facebook.buck.core.model.InternalFlavor;
-import com.facebook.buck.core.model.UnconfiguredBuildTarget;
+import com.facebook.buck.core.model.UnconfiguredBuildTargetView;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.parser.exceptions.NoSuchBuildTargetException;
 import com.google.common.collect.ImmutableMap;
 import java.nio.file.Path;
@@ -45,21 +47,23 @@ public class BuildTargetParserTest {
   @Test
   public void testParseRootRule() {
     // Parse "//:fb4a" with the BuildTargetParser and test all of its observers.
-    UnconfiguredBuildTarget buildTarget = parser.parse(createCellRoots(null), "//:fb4a", "", false);
+    UnconfiguredBuildTargetView buildTarget =
+        parser.parse(createCellRoots(null), "//:fb4a", null, false);
     assertEquals("fb4a", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//", buildTarget.getBaseName());
-    assertEquals(Paths.get(""), buildTarget.getBasePath());
+    assertEquals("//", buildTarget.getBaseName().toString());
+    assertEquals(ForwardRelativePath.of(""), buildTarget.getCellRelativeBasePath().getPath());
     assertEquals("//:fb4a", buildTarget.getFullyQualifiedName());
   }
 
   @Test
   public void testParseRuleWithFlavors() {
-    UnconfiguredBuildTarget buildTarget =
-        parser.parse(createCellRoots(null), "//:lib#foo,bar", "", false);
+    UnconfiguredBuildTargetView buildTarget =
+        parser.parse(createCellRoots(null), "//:lib#foo,bar", null, false);
     // Note the sort order.
     assertEquals("lib#bar,foo", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//", buildTarget.getBaseName());
-    assertEquals(Paths.get(""), buildTarget.getBasePath());
+    assertEquals("//", buildTarget.getBaseName().toString());
+    assertEquals(
+        Paths.get(""), buildTarget.getCellRelativeBasePath().getPath().toPathDefaultFileSystem());
     // Note the sort order.
     assertEquals("//:lib#bar,foo", buildTarget.getFullyQualifiedName());
     assertThat(
@@ -68,50 +72,48 @@ public class BuildTargetParserTest {
 
   @Test
   public void testParseValidTargetWithDots() {
-    UnconfiguredBuildTarget buildTarget =
-        parser.parse(createCellRoots(null), "//..a/b../a...b:assets", "", false);
+    UnconfiguredBuildTargetView buildTarget =
+        parser.parse(createCellRoots(null), "//..a/b../a...b:assets", null, false);
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
-    assertEquals("//..a/b../a...b", buildTarget.getBaseName());
-    assertEquals(Paths.get("..a", "b..", "a...b"), buildTarget.getBasePath());
+    assertEquals("//..a/b../a...b", buildTarget.getBaseName().toString());
+    assertEquals(
+        Paths.get("..a", "b..", "a...b"),
+        buildTarget.getCellRelativeBasePath().getPath().toPathDefaultFileSystem());
     assertEquals("//..a/b../a...b:assets", buildTarget.getFullyQualifiedName());
   }
 
   @Test
   public void testParsePathWithDot() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage(" . ");
-    exception.expectMessage("(found //.:assets)");
-    parser.parse(createCellRoots(null), "//.:assets", "", false);
+    exception.expectMessage("incorrect base name: //..");
+    parser.parse(createCellRoots(null), "//.:assets", null, false);
   }
 
   @Test
   public void testParsePathWithDotDot() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage(" .. ");
-    exception.expectMessage("(found //../facebookorca:assets)");
-    parser.parse(createCellRoots(null), "//../facebookorca:assets", "", false);
+    exception.expectMessage("incorrect base name: //../facebookorca");
+    parser.parse(createCellRoots(null), "//../facebookorca:assets", null, false);
   }
 
   @Test
   public void testParseAbsolutePath() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage("absolute");
-    exception.expectMessage("(found ///facebookorca:assets)");
-    parser.parse(createCellRoots(null), "///facebookorca:assets", "", false);
+    exception.expectMessage("incorrect base name: ///facebookorca");
+    parser.parse(createCellRoots(null), "///facebookorca:assets", null, false);
   }
 
   @Test
   public void testParseDoubleSlashPath() {
     exception.expect(BuildTargetParseException.class);
-    exception.expectMessage("//");
-    exception.expectMessage("(found //facebook//orca:assets)");
-    parser.parse(createCellRoots(null), "//facebook//orca:assets", "", false);
+    exception.expectMessage("incorrect base name: //facebook//orca");
+    parser.parse(createCellRoots(null), "//facebook//orca:assets", null, false);
   }
 
   @Test
   public void testParseTrailingColon() {
     try {
-      parser.parse(createCellRoots(null), "//facebook/orca:assets:", "", false);
+      parser.parse(createCellRoots(null), "//facebook/orca:assets:", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals("//facebook/orca:assets: cannot end with a colon", e.getMessage());
@@ -121,7 +123,7 @@ public class BuildTargetParserTest {
   @Test
   public void testParseNoColon() {
     try {
-      parser.parse(createCellRoots(null), "//facebook/orca/assets", "", false);
+      parser.parse(createCellRoots(null), "//facebook/orca/assets", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals(
@@ -132,7 +134,7 @@ public class BuildTargetParserTest {
   @Test
   public void testParseMultipleColons() {
     try {
-      parser.parse(createCellRoots(null), "//facebook:orca:assets", "", false);
+      parser.parse(createCellRoots(null), "//facebook:orca:assets", null, false);
       fail("parse() should throw an exception");
     } catch (BuildTargetParseException e) {
       assertEquals(
@@ -141,25 +143,36 @@ public class BuildTargetParserTest {
   }
 
   @Test
+  public void testSlashBeforeColon() {
+    try {
+      parser.parse(createCellRoots(null), "//facebook/:orca", null, false);
+      fail("parse() should throw an exception");
+    } catch (BuildTargetParseException e) {
+      assertEquals(
+          "When parsing //facebook/:orca: incorrect base name: //facebook/.", e.getMessage());
+    }
+  }
+
+  @Test
   public void testParseFullyQualified() {
-    UnconfiguredBuildTarget buildTarget =
-        parser.parse(createCellRoots(null), "//facebook/orca:assets", "", false);
-    assertEquals("//facebook/orca", buildTarget.getBaseName());
+    UnconfiguredBuildTargetView buildTarget =
+        parser.parse(createCellRoots(null), "//facebook/orca:assets", null, false);
+    assertEquals("//facebook/orca", buildTarget.getBaseName().toString());
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
   }
 
   @Test
   public void testParseBuildFile() {
-    UnconfiguredBuildTarget buildTarget =
-        parser.parse(createCellRoots(null), ":assets", "//facebook/orca", false);
-    assertEquals("//facebook/orca", buildTarget.getBaseName());
+    UnconfiguredBuildTargetView buildTarget =
+        parser.parse(createCellRoots(null), ":assets", BaseName.of("//facebook/orca"), false);
+    assertEquals("//facebook/orca", buildTarget.getBaseName().toString());
     assertEquals("assets", buildTarget.getShortNameAndFlavorPostfix());
   }
 
   @Test
   public void testParseWithVisibilityContext() {
-    UnconfiguredBuildTarget target =
-        parser.parse(createCellRoots(null), "//java/com/example:", "", true);
+    UnconfiguredBuildTargetView target =
+        parser.parse(createCellRoots(null), "//java/com/example:", null, true);
     assertEquals(
         "A build target that ends with a colon should be treated as a wildcard build target "
             + "when parsed in the context of a visibility argument.",
@@ -171,50 +184,50 @@ public class BuildTargetParserTest {
   public void testParseWithRepoName() {
     Path localRepoRoot = Paths.get("/opt/local/repo");
     CellPathResolver cellRoots =
-        DefaultCellPathResolver.of(
+        TestCellPathResolver.create(
             Paths.get("/opt/local/rootcell"), ImmutableMap.of("localreponame", localRepoRoot));
     String targetStr = "localreponame//foo/bar:baz";
 
-    UnconfiguredBuildTarget buildTarget = parser.parse(cellRoots, targetStr, "", false);
+    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, null, false);
     assertEquals("localreponame//foo/bar:baz", buildTarget.getFullyQualifiedName());
-    assertTrue(buildTarget.getCell().isPresent());
-    assertEquals(localRepoRoot, buildTarget.getCellPath());
+    assertTrue(buildTarget.getCell().getLegacyName().isPresent());
+    assertEquals("localreponame", buildTarget.getCell().getName());
   }
 
   @Test
   public void atPrefixOfCellsIsSupportedAndIgnored() {
     Path localRepoRoot = Paths.get("/opt/local/repo");
     CellPathResolver cellRoots =
-        DefaultCellPathResolver.of(
+        TestCellPathResolver.create(
             Paths.get("/opt/local/rootcell"), ImmutableMap.of("localreponame", localRepoRoot));
     String targetStr = "@localreponame//foo/bar:baz";
 
-    UnconfiguredBuildTarget buildTarget = parser.parse(cellRoots, targetStr, "", false);
+    UnconfiguredBuildTargetView buildTarget = parser.parse(cellRoots, targetStr, null, false);
     assertEquals("localreponame//foo/bar:baz", buildTarget.getFullyQualifiedName());
-    assertTrue(buildTarget.getCell().isPresent());
-    assertEquals(localRepoRoot, buildTarget.getCellPath());
+    assertTrue(buildTarget.getCell().getLegacyName().isPresent());
+    assertEquals("localreponame", buildTarget.getCell().getName());
   }
 
-  @Test(expected = BuildTargetParseException.class)
+  @Test
   public void testParseFailsWithRepoNameAndRelativeTarget() throws NoSuchBuildTargetException {
-
+    exception.expect(BuildTargetParseException.class);
     String invalidTargetStr = "myRepo:baz";
-    parser.parse(createCellRoots(null), invalidTargetStr, "", false);
+    parser.parse(createCellRoots(null), invalidTargetStr, null, false);
   }
 
   @Test
   public void testParseWithBackslash() {
+    exception.expect(BuildTargetParseException.class);
+    exception.expectMessage("incorrect base name: //com\\microsoft\\windows");
     String backslashStr = "//com\\microsoft\\windows:something";
-    UnconfiguredBuildTarget buildTarget =
-        parser.parse(createCellRoots(null), backslashStr, "", false);
-    assertEquals("//com/microsoft/windows", buildTarget.getBaseName());
+    parser.parse(createCellRoots(null), backslashStr, null, false);
   }
 
   @Test
   public void testIncludesTargetNameInMissingCellErrorMessage() {
     Path localRepoRoot = Paths.get("/opt/local/repo");
     CellPathResolver cellRoots =
-        DefaultCellPathResolver.of(
+        TestCellPathResolver.create(
             Paths.get("/opt/local/rootcell"), ImmutableMap.of("localreponame", localRepoRoot));
 
     exception.expect(BuildTargetParseException.class);
@@ -224,6 +237,6 @@ public class BuildTargetParserTest {
     exception.expectMessage("Unknown cell: lclreponame");
     // And the suggestion
     exception.expectMessage("localreponame");
-    parser.parse(cellRoots, "lclreponame//facebook/orca:assets", "", false);
+    parser.parse(cellRoots, "lclreponame//facebook/orca:assets", null, false);
   }
 }
