@@ -1,17 +1,17 @@
 /*
- * Copyright 2018-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.parser;
@@ -23,13 +23,18 @@ import static org.junit.Assert.assertThat;
 
 import com.facebook.buck.core.cell.Cell;
 import com.facebook.buck.core.cell.TestCellBuilder;
+import com.facebook.buck.core.graph.transformation.executor.DepsAwareExecutor;
+import com.facebook.buck.core.graph.transformation.executor.impl.DefaultDepsAwareExecutor;
+import com.facebook.buck.core.graph.transformation.model.ComputeResult;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.targetgraph.TargetNode;
-import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetFactory;
+import com.facebook.buck.core.model.CellRelativePath;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.parser.buildtargetparser.ParsingUnconfiguredBuildTargetViewFactory;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.plugin.impl.BuckPluginManagerFactory;
-import com.facebook.buck.core.rules.knowntypes.KnownRuleTypesProvider;
 import com.facebook.buck.core.rules.knowntypes.TestKnownRuleTypesProvider;
+import com.facebook.buck.core.rules.knowntypes.provider.KnownRuleTypesProvider;
 import com.facebook.buck.event.BuckEventBus;
 import com.facebook.buck.event.BuckEventBusForTests;
 import com.facebook.buck.io.ExecutableFinder;
@@ -38,13 +43,16 @@ import com.facebook.buck.io.filesystem.TestProjectFilesystems;
 import com.facebook.buck.io.watchman.WatchmanFactory;
 import com.facebook.buck.manifestservice.ManifestService;
 import com.facebook.buck.parser.TargetSpecResolver.FlavorEnhancer;
-import com.facebook.buck.parser.TargetSpecResolver.TargetNodeProviderForSpecResolver;
+import com.facebook.buck.parser.config.ParserConfig;
 import com.facebook.buck.parser.exceptions.BuildFileParseException;
-import com.facebook.buck.parser.exceptions.BuildTargetException;
+import com.facebook.buck.parser.spec.BuildFileSpec;
+import com.facebook.buck.parser.spec.TargetNodePredicateSpec;
+import com.facebook.buck.parser.spec.TargetNodeSpec;
 import com.facebook.buck.rules.coercer.ConstructorArgMarshaller;
 import com.facebook.buck.rules.coercer.DefaultConstructorArgMarshaller;
 import com.facebook.buck.rules.coercer.DefaultTypeCoercerFactory;
 import com.facebook.buck.rules.coercer.TypeCoercerFactory;
+import com.facebook.buck.testutil.CloseableResource;
 import com.facebook.buck.testutil.FakeFileHashCache;
 import com.facebook.buck.testutil.TemporaryPaths;
 import com.facebook.buck.testutil.integration.ProjectWorkspace;
@@ -53,13 +61,13 @@ import com.facebook.buck.util.ThrowingCloseableMemoizedSupplier;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.ListeningExecutorService;
 import com.google.common.util.concurrent.MoreExecutors;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Optional;
 import java.util.concurrent.Executors;
 import org.junit.After;
 import org.junit.Before;
@@ -73,6 +81,10 @@ public class TargetSpecResolverTest {
   @Rule public TemporaryPaths tmp = new TemporaryPaths();
   @Rule public ExpectedException thrown = ExpectedException.none();
 
+  @Rule
+  public CloseableResource<DepsAwareExecutor<? super ComputeResult, ?>> executor =
+      CloseableResource.of(() -> DefaultDepsAwareExecutor.of(4));
+
   private ProjectWorkspace workspace;
   private ProjectFilesystem filesystem;
   private Path cellRoot;
@@ -85,7 +97,7 @@ public class TargetSpecResolverTest {
   private ConstructorArgMarshaller constructorArgMarshaller;
   private ListeningExecutorService executorService;
   private TargetSpecResolver targetNodeTargetSpecResolver;
-  private FlavorEnhancer<TargetNode<?>> flavorEnhancer;
+  private FlavorEnhancer flavorEnhancer;
 
   private static ThrowingCloseableMemoizedSupplier<ManifestService, IOException>
       getManifestSupplier() {
@@ -111,20 +123,21 @@ public class TargetSpecResolverTest {
     parserPythonInterpreterProvider =
         new ParserPythonInterpreterProvider(parserConfig, executableFinder);
     perBuildStateFactory =
-        PerBuildStateFactory.createFactory(
+        new PerBuildStateFactory(
             typeCoercerFactory,
             constructorArgMarshaller,
             knownRuleTypesProvider,
             parserPythonInterpreterProvider,
-            cell.getBuckConfig(),
             WatchmanFactory.NULL_WATCHMAN,
             eventBus,
             getManifestSupplier(),
             new FakeFileHashCache(ImmutableMap.of()),
-            new ParsingUnconfiguredBuildTargetFactory());
+            new ParsingUnconfiguredBuildTargetViewFactory(),
+            UnconfiguredTargetConfiguration.INSTANCE);
 
-    targetNodeTargetSpecResolver = new TargetSpecResolver(eventBus, WatchmanFactory.NULL_WATCHMAN);
-    parser = TestParserFactory.create(cell.getBuckConfig(), perBuildStateFactory);
+    targetNodeTargetSpecResolver =
+        TestTargetSpecResolverFactory.create(executor.get(), cell.getCellProvider(), eventBus);
+    parser = TestParserFactory.create(executor.get(), cell, perBuildStateFactory);
     flavorEnhancer = (target, targetNode, targetType) -> target;
     executorService = MoreExecutors.listeningDecorator(Executors.newFixedThreadPool(1));
   }
@@ -142,13 +155,15 @@ public class TargetSpecResolverTest {
         resolve(
             ImmutableList.of(
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(Paths.get(""), cell.getRoot()))));
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.of(""))))));
 
     ImmutableSet<BuildTarget> expectedTargets =
         ImmutableSet.of(
-            BuildTargetFactory.newInstance(cellRoot, "//src", "foo"),
-            BuildTargetFactory.newInstance(cellRoot, "//src", "bar"),
-            BuildTargetFactory.newInstance(cellRoot, "//src", "baz"));
+            BuildTargetFactory.newInstance("//src", "foo"),
+            BuildTargetFactory.newInstance("//src", "bar"),
+            BuildTargetFactory.newInstance("//src", "baz"));
     assertEquals("Should have returned all rules.", ImmutableList.of(expectedTargets), targets);
   }
 
@@ -169,19 +184,21 @@ public class TargetSpecResolverTest {
     resolve(
         ImmutableList.of(
             TargetNodePredicateSpec.of(
-                BuildFileSpec.fromRecursivePath(Paths.get("bar"), cell.getRoot())),
+                BuildFileSpec.fromRecursivePath(
+                    CellRelativePath.of(cell.getCanonicalName(), ForwardRelativePath.of("bar")))),
             TargetNodePredicateSpec.of(
-                BuildFileSpec.fromRecursivePath(Paths.get("foo"), cell.getRoot()))));
+                BuildFileSpec.fromRecursivePath(
+                    CellRelativePath.of(cell.getCanonicalName(), ForwardRelativePath.of("foo"))))));
   }
 
   @Test
   public void resolveTargetSpecsPreservesOrder() throws Exception {
-    BuildTarget foo = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//foo:foo");
+    BuildTarget foo = BuildTargetFactory.newInstance("//foo:foo");
     Path buckFile = cellRoot.resolve("foo/BUCK");
     Files.createDirectories(buckFile.getParent());
     Files.write(buckFile, "genrule(name='foo', out='foo', cmd='foo')".getBytes(UTF_8));
 
-    BuildTarget bar = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//bar:bar");
+    BuildTarget bar = BuildTargetFactory.newInstance("//bar:bar");
     buckFile = cellRoot.resolve("bar/BUCK");
     Files.createDirectories(buckFile.getParent());
     Files.write(buckFile, "genrule(name='bar', out='bar', cmd='bar')".getBytes(UTF_8));
@@ -190,18 +207,26 @@ public class TargetSpecResolverTest {
         resolve(
             ImmutableList.of(
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(Paths.get("bar"), cell.getRoot())),
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.of("bar")))),
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(Paths.get("foo"), cell.getRoot()))));
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.of("foo"))))));
     assertThat(targets, equalTo(ImmutableList.of(ImmutableSet.of(bar), ImmutableSet.of(foo))));
 
     targets =
         resolve(
             ImmutableList.of(
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(Paths.get("foo"), cell.getRoot())),
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.of("foo")))),
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(Paths.get("bar"), cell.getRoot()))));
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.of("bar"))))));
     assertThat(targets, equalTo(ImmutableList.of(ImmutableSet.of(foo), ImmutableSet.of(bar))));
   }
 
@@ -216,34 +241,18 @@ public class TargetSpecResolverTest {
         resolve(
             ImmutableList.of(
                 TargetNodePredicateSpec.of(
-                    BuildFileSpec.fromRecursivePath(buckout, cell.getRoot()))));
+                    BuildFileSpec.fromRecursivePath(
+                        CellRelativePath.of(
+                            cell.getCanonicalName(), ForwardRelativePath.ofPath(buckout))))));
     assertThat(targets, equalTo(ImmutableList.of(ImmutableSet.of())));
   }
 
   private ImmutableList<ImmutableSet<BuildTarget>> resolve(Iterable<? extends TargetNodeSpec> specs)
-      throws IOException, InterruptedException {
+      throws InterruptedException {
     PerBuildState state =
         perBuildStateFactory.create(
-            ParsingContext.builder(cell, executorService).build(),
-            parser.getPermState(),
-            ImmutableList.of());
+            ParsingContext.builder(cell, executorService).build(), parser.getPermState());
     return targetNodeTargetSpecResolver.resolveTargetSpecs(
-        cell,
-        specs,
-        flavorEnhancer,
-        new TargetNodeProviderForSpecResolver<TargetNode<?>>() {
-          @Override
-          public ListenableFuture<TargetNode<?>> getTargetNodeJob(BuildTarget target)
-              throws BuildTargetException {
-            return state.getTargetNodeJob(target);
-          }
-
-          @Override
-          public ListenableFuture<ImmutableList<TargetNode<?>>> getAllTargetNodesJob(
-              Cell cell, Path buildFile) throws BuildTargetException {
-            return state.getAllTargetNodesJob(cell, buildFile);
-          }
-        },
-        (spec, nodes) -> spec.filter(nodes));
+        cell, specs, Optional.empty(), flavorEnhancer, state, (spec, nodes) -> spec.filter(nodes));
   }
 }
