@@ -1,17 +1,17 @@
 /*
- * Copyright 2014-present Facebook, Inc.
+ * Copyright (c) Facebook, Inc. and its affiliates.
  *
- * Licensed under the Apache License, Version 2.0 (the "License"); you may
- * not use this file except in compliance with the License. You may obtain
- * a copy of the License at
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
  *
  *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
- * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
- * License for the specific language governing permissions and limitations
- * under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
  */
 
 package com.facebook.buck.rules.macros;
@@ -20,24 +20,19 @@ import static org.hamcrest.Matchers.allOf;
 import static org.hamcrest.Matchers.containsString;
 import static org.junit.Assert.assertEquals;
 
-import com.facebook.buck.core.build.buildable.context.BuildableContext;
-import com.facebook.buck.core.build.context.BuildContext;
 import com.facebook.buck.core.cell.CellPathResolver;
 import com.facebook.buck.core.cell.TestCellBuilder;
 import com.facebook.buck.core.exceptions.HumanReadableException;
+import com.facebook.buck.core.macros.MacroException;
 import com.facebook.buck.core.model.BuildTarget;
 import com.facebook.buck.core.model.BuildTargetFactory;
-import com.facebook.buck.core.model.EmptyTargetConfiguration;
+import com.facebook.buck.core.model.OutputLabel;
+import com.facebook.buck.core.model.UnconfiguredTargetConfiguration;
+import com.facebook.buck.core.path.ForwardRelativePath;
 import com.facebook.buck.core.rules.ActionGraphBuilder;
 import com.facebook.buck.core.rules.BuildRule;
-import com.facebook.buck.core.rules.SourcePathRuleFinder;
-import com.facebook.buck.core.rules.attr.HasSupplementaryOutputs;
-import com.facebook.buck.core.rules.impl.AbstractBuildRule;
+import com.facebook.buck.core.rules.impl.PathReferenceRuleWithMultipleOutputs;
 import com.facebook.buck.core.rules.resolver.impl.TestActionGraphBuilder;
-import com.facebook.buck.core.sourcepath.ExplicitBuildTargetSourcePath;
-import com.facebook.buck.core.sourcepath.SourcePath;
-import com.facebook.buck.core.sourcepath.resolver.SourcePathResolver;
-import com.facebook.buck.core.sourcepath.resolver.impl.DefaultSourcePathResolver;
 import com.facebook.buck.io.filesystem.ProjectFilesystem;
 import com.facebook.buck.io.filesystem.impl.FakeProjectFilesystem;
 import com.facebook.buck.jvm.java.JavaBinaryRuleBuilder;
@@ -45,13 +40,12 @@ import com.facebook.buck.jvm.java.JavaLibraryBuilder;
 import com.facebook.buck.rules.args.Arg;
 import com.facebook.buck.rules.coercer.CoerceFailedException;
 import com.facebook.buck.rules.coercer.DefaultTypeCoercerFactory;
-import com.facebook.buck.step.Step;
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSortedSet;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.SortedSet;
-import javax.annotation.Nullable;
+import org.hamcrest.Matchers;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
@@ -69,11 +63,11 @@ public class LocationMacroExpanderTest {
     cellPathResolver = TestCellBuilder.createCellRoots(projectFilesystem);
     graphBuilder = new TestActionGraphBuilder();
     converter =
-        StringWithMacrosConverter.builder()
-            .setBuildTarget(buildTarget)
-            .setCellPathResolver(cellPathResolver)
-            .addExpanders(new LocationMacroExpander())
-            .build();
+        StringWithMacrosConverter.of(
+            buildTarget,
+            cellPathResolver,
+            graphBuilder,
+            ImmutableList.of(new LocationMacroExpander()));
     return graphBuilder;
   }
 
@@ -111,9 +105,8 @@ public class LocationMacroExpanderTest {
     String transformedString = coerceAndStringify(originalCmd, javaRule);
 
     // Verify that the correct cmd was created.
-    SourcePathResolver pathResolver =
-        DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder));
-    Path absolutePath = pathResolver.getAbsolutePath(javaRule.getSourcePathToOutput());
+    Path absolutePath =
+        graphBuilder.getSourcePathResolver().getAbsolutePath(javaRule.getSourcePathToOutput());
     String expectedCmd = String.format("%s %s $OUT", absolutePath, absolutePath);
 
     assertEquals(expectedCmd, transformedString);
@@ -122,14 +115,73 @@ public class LocationMacroExpanderTest {
   @Test
   public void replaceSupplementalOutputLocation() throws Exception {
     filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
-    BuildTarget buildTarget = BuildTargetFactory.newInstance(filesystem.getRootPath(), "//foo:bar");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
     graphBuilder = setup(filesystem, buildTarget);
     BuildRule rule = new RuleWithSupplementaryOutput(buildTarget, filesystem);
     graphBuilder.addToIndex(rule);
 
     String transformedString = coerceAndStringify("$(location //foo:bar[sup])", rule);
 
-    assertEquals("/some_root/supplementary-sup", transformedString);
+    assertEquals(
+        filesystem.getRootPath().resolve("supplementary-sup").toString(), transformedString);
+  }
+
+  @Test
+  public void replaceOutputLabelOutputLocation() throws Exception {
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget,
+            filesystem,
+            Paths.get("incorrect"),
+            ImmutableMap.of(OutputLabel.of("label"), ImmutableSet.of(Paths.get("pathpathpath"))));
+    graphBuilder.addToIndex(rule);
+
+    String transformedString = coerceAndStringify("$(location //foo:bar[label])", rule);
+
+    assertEquals(filesystem.getRootPath().resolve("pathpathpath").toString(), transformedString);
+  }
+
+  @Test
+  public void throwsExceptionWhenCannotFindNamedOutputs() throws Exception {
+    thrown.expect(HumanReadableException.class);
+    thrown.expectCause(Matchers.instanceOf(MacroException.class));
+    thrown.expectMessage(
+        "//foo:bar used in location macro does not produce outputs with label [nonexistent]");
+
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget, filesystem, Paths.get("incorrect"), ImmutableMap.of());
+    graphBuilder.addToIndex(rule);
+
+    coerceAndStringify("$(location //foo:bar[nonexistent])", rule);
+  }
+
+  @Test
+  public void throwsExceptionWhenRetrieveMultipleOutputs() throws Exception {
+    thrown.expect(HumanReadableException.class);
+    thrown.expectCause(Matchers.instanceOf(MacroException.class));
+    thrown.expectMessage(
+        "//foo:bar[label] produces multiple outputs but location macro accepts only one output");
+
+    filesystem = FakeProjectFilesystem.createJavaOnlyFilesystem("/some_root");
+    BuildTarget buildTarget = BuildTargetFactory.newInstance("//foo:bar");
+    graphBuilder = setup(filesystem, buildTarget);
+    BuildRule rule =
+        new PathReferenceRuleWithMultipleOutputs(
+            buildTarget,
+            filesystem,
+            Paths.get("incorrect"),
+            ImmutableMap.of(
+                OutputLabel.of("label"), ImmutableSet.of(Paths.get("path1"), Paths.get("path2"))));
+    graphBuilder.addToIndex(rule);
+
+    coerceAndStringify("$(location //foo:bar[label])", rule);
   }
 
   @Test
@@ -148,41 +200,10 @@ public class LocationMacroExpanderTest {
         .coerce(
             cellPathResolver,
             filesystem,
-            Paths.get(""),
-            EmptyTargetConfiguration.INSTANCE,
+            ForwardRelativePath.of(""),
+            UnconfiguredTargetConfiguration.INSTANCE,
+            UnconfiguredTargetConfiguration.INSTANCE,
             "$(location )");
-  }
-
-  private final class RuleWithSupplementaryOutput extends AbstractBuildRule
-      implements HasSupplementaryOutputs {
-
-    public RuleWithSupplementaryOutput(
-        BuildTarget buildTarget, ProjectFilesystem projectFilesystem) {
-      super(buildTarget, projectFilesystem);
-    }
-
-    @Override
-    public SourcePath getSourcePathToSupplementaryOutput(String name) {
-      return ExplicitBuildTargetSourcePath.of(
-          getBuildTarget(), getProjectFilesystem().getPath("supplementary-" + name));
-    }
-
-    @Override
-    public SortedSet<BuildRule> getBuildDeps() {
-      return ImmutableSortedSet.of();
-    }
-
-    @Override
-    public ImmutableList<? extends Step> getBuildSteps(
-        BuildContext context, BuildableContext buildableContext) {
-      return ImmutableList.of();
-    }
-
-    @Nullable
-    @Override
-    public SourcePath getSourcePathToOutput() {
-      return null;
-    }
   }
 
   private String coerceAndStringify(String input, BuildRule rule) throws CoerceFailedException {
@@ -193,11 +214,11 @@ public class LocationMacroExpanderTest {
                 .coerce(
                     cellPathResolver,
                     filesystem,
-                    rule.getBuildTarget().getBasePath(),
-                    EmptyTargetConfiguration.INSTANCE,
+                    rule.getBuildTarget().getCellRelativeBasePath().getPath(),
+                    UnconfiguredTargetConfiguration.INSTANCE,
+                    UnconfiguredTargetConfiguration.INSTANCE,
                     input);
-    Arg arg = converter.convert(stringWithMacros, graphBuilder);
-    return Arg.stringify(
-        arg, DefaultSourcePathResolver.from(new SourcePathRuleFinder(graphBuilder)));
+    Arg arg = converter.convert(stringWithMacros);
+    return Arg.stringify(arg, graphBuilder.getSourcePathResolver());
   }
 }
